desktop version done

--- a/style.css
+++ b/style.css
@@ -36,26 +36,29 @@ main {
     justify-content: center;
     align-items: center;
     margin: 4rem auto;
-    width: 28rem;
-    border: 1px solid red;
-    border-radius: 2rem;
+    max-width: 28rem;
+    border-radius: 1rem;
     overflow: hidden;
     background-color: #fff;
+    box-shadow: 0px 15px 30px rgba(56, 41, 224, 0.15);
 }
 
-.image {
+.image-desktop {
     width: 100%;
 }
 
+.image-mobile {
+    display: none;
+}
+
 .description {
-    margin-top: 1rem;
-    padding: 2rem;
+    margin: 1rem;
     text-align: center;
     width: 80%;
 }
 
 .description p {
-    margin-top: 1rem;
+    padding: .5rem;
     font-weight: 500;
     color: var(--Desaturated-blue);
 }
@@ -63,31 +66,82 @@ main {
 .plan {
     background-color: var(--Very-pale-blue);
     width: 80%;
-    height: 6rem;
+    margin: 1rem 0;
+    height: 5.5rem;
     border-radius: 1rem;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
-    margin-bottom: 1rem;
 }
 
-.plan p:first-child {
+.plan .details {
+    display: flex;
+    gap: .8rem;
+}
+
+.plan-details p:first-child {
     font-weight: 900;
 }
 
+.plan-details p:last-child {
+    font-weight: 500;
+    color: var(--Desaturated-blue);
+}
 
+.plan a {
+    font-weight: 700;
+    transition: .5s;
+}
 
+.plan a:hover {
+    opacity: .7;
+    text-decoration: none;
+}
 
+.btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    flex-direction: column;
+    gap: 1rem;
+    margin: 1rem 0;
+}
 
+.btn button {
+    cursor: pointer;
+    transition: .5s;
+}
 
+.btn button:first-child {
+    background-color: var(--Bright-blue);
+    border: none;
+    border-radius: .5rem;
+    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.445);
+    width: 80%;
+    height: 2.5rem;
+    color: #fff;
+    font-weight: 900;
+}
 
+.btn button:first-child:hover {
+    opacity: .7;
+}
 
+.btn button:last-child {
+    border: none;
+    background: transparent;
+    margin: 1rem;
+    font-weight: 900;
+    color: var(--Desaturated-blue);
+}
 
-
-
-
+.btn button:last-child:hover {
+    color: #000;
+}
 
 .attribution {
+    margin-top: 2rem;
     font-size: 11px;
     text-align: center;
 }
@@ -95,3 +149,4 @@ main {
 .attribution a {
     color: hsl(228, 45%, 44%);
 }
+
